--- a/templates/common/form/download_upload_form.html
+++ b/templates/common/form/download_upload_form.html
@@ -27,6 +27,12 @@
                     {{ error }}
                 </p>
             {% endfor %}
+            {% for error in import_errors %}
+                <p id="text-input-error-desc-error" class="fr-error-text">
+                    {{ error }}
+                </p>
+            {% endfor %}
+
         </div>
 
     </div>
