--- a/templates/conventions/step3.html
+++ b/templates/conventions/step3.html
@@ -108,7 +108,7 @@
                         </div>
 
                         <h4>
-                            Locaux auxquels ne s'applique pas la présente convention
+                            Locaux auxquels ne s'appliquent pas la présente convention
                         </h4>
 
                         <div class="fr-mb-2w">
