--- a/templates/conventions/step5.html
+++ b/templates/conventions/step5.html
@@ -88,6 +88,14 @@
                             </table>
                         </div>
 
+                        <div class="fr-input-group {% if form.fond_propre.errors %}fr-select-group--error{% endif %}">
+                            <label class="fr-label" for="{{form.fond_propre.id_for_label}}">
+                                Fond propre
+                            </label>
+                            {% include "common/form/input_number.html" with form_input=form.fond_propre step="0.01" %}
+                        </div>
+
+
                     </div>
                 </div>
                 <div class="fr-col-md-12 fr-col-lg-10 fr-col-offset-lg-1 fr-py-5w" style="display: flex;flex-direction: row;align-items: center;justify-content: space-between;">
