--- a/templates/conventions/step5.html
+++ b/templates/conventions/step5.html
@@ -30,6 +30,12 @@
                             </p>
                         {% endfor %}
 
+                        {% for error in formset.non_form_errors %}
+                            <p id="text-input-error-desc-error" class="fr-error-text">
+                                {{ error }}
+                            </p>
+                        {% endfor %}
+
                         {{ formset.management_form }}
                         <div class="fr-table fr-table--bordered">
                             <table>
