--- a/templates/layout/header.html
+++ b/templates/layout/header.html
@@ -31,7 +31,7 @@
                     </div>
                 </div>
                 {% if not without_action_button %}
-                    <div class="fr-header__tools fr-mt-2w">
+                    <div class="fr-header__tools">
                         <div class="fr-header__tools-links">
                             {% if user.is_authenticated %}
                                 <ul class="fr-links-group">
