--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -38,7 +38,7 @@
                             <label class="fr-label" for="password">Mot de passe</label>
                             <input class="fr-input {% if form.errors %}fr-input--error{% endif %}" type="password" id="password" name="password">
                         </div>
-                        <div class="fr-mt-3w">
+                        <div class="fr-my-3w">
                             <button class="fr-btn" type="submit">
                                 Connexion
                             </button>
