--- a/templates/registration/password_reset_email.html
+++ b/templates/registration/password_reset_email.html
@@ -1,6 +1,6 @@
 Bonjour {{username}}
 
-Vous avez demander la ré-initialisation de votre mot de passe associé au courriel {{ email }}
+Vous avez demander la réinitialisation de votre mot de passe associé au courriel {{ email }}
 Veuillez suivre le lien :
 {{ protocol}}://{{ domain }}{% url 'password_reset_confirm' uidb64=uid token=token %}
 
