--- a/templates/registration/password_reset_form.html
+++ b/templates/registration/password_reset_form.html
@@ -4,7 +4,10 @@
         <div class="fr-container">
             <div class="fr-grid-row fr-grid-row--gutters">
                 <div class="fr-col-lg-6 fr-col-offset-lg-1 fr-mb-2w">
-                    {% include "common/bailleur_presentation.html" %}
+                    <h2 class="fr-mt-3w fr-mt-md-5w fr-mb-5w">Mot de passe oublié</h2>
+                    <p class="fr-mb-3w">
+                        Veuillez remplir le formulaire ci-contre pour commencer la procédure de modification de mot de passe
+                    </p>
                 </div>
                 <div class="fr-col-12 fr-col-lg-5 fr-pl-0 fr-pl-md-4w fr-py-4w fr-pb-0">
 
@@ -21,7 +24,7 @@
                         </div>
                         <div class="fr-mt-3w">
                             <button class="fr-btn" type="submit">
-                                Ré-initialiser mon mot de passe
+                                Réinitialiser mon mot de passe
                             </button>
                         </div>
                     </form>
