--- a/templates/common/button/login.html
+++ b/templates/common/button/login.html
@@ -1,3 +1,3 @@
-<button class="fr-btn" onclick="location.href='{% url 'login' %}?next={{ request.path }}'">
-    <span class="fr-fi-edit-line fr-mr-1w" aria-hidden="true"></span>Faire ma convention
+<button class="fr-btn fr-fi-edit-line fr-btn--icon-left " onclick="location.href='{% url 'login' %}?next={{ request.path }}'">
+    Créer une convention APL
 </button>
