--- a/templates/common/button/suivant.html
+++ b/templates/common/button/suivant.html
@@ -1,9 +1,9 @@
 {% if convention_uuid %}
-    <button class="fr-btn" onclick="location.href='{% url suivant convention_uuid=convention_uuid %}'">
-        Enregistrer et Suivant<span class="fr-fi-arrow-right-s-line fr-ml-1w" aria-hidden="true"></span>
+    <button class="fr-btn fr-fi-arrow-right-s-line fr-btn--icon-right" onclick="location.href='{% url suivant convention_uuid=convention_uuid %}'">
+        Enregistrer et Suivant
     </button>
 {% else %}
-    <button class="fr-btn" onclick="location.href='{% url suivant %}'">
-        Enregistrer et Suivant<span class="fr-fi-arrow-right-s-line fr-ml-1w" aria-hidden="true"></span>
+    <button class="fr-btn fr-fi-arrow-right-s-line fr-btn--icon-right" onclick="location.href='{% url suivant %}'">
+        Enregistrer et Suivant
     </button>
 {% endif %}
