--- a/templates/common/button/suivant_submit.html
+++ b/templates/common/button/suivant_submit.html
@@ -1,3 +1,3 @@
-<button class="fr-btn" type="submit">
-    Enregistrer et Suivant<span class="fr-fi-arrow-right-s-line fr-ml-1w" aria-hidden="true"></span>
+<button class="fr-btn  fr-fi-arrow-right-s-line fr-btn--icon-right" type="submit">
+    Enregistrer et Suivant
 </button>
