--- a/templates/common/form/download_upload_form.html
+++ b/templates/common/form/download_upload_form.html
@@ -3,15 +3,15 @@
 
     <div class="fr-grid-row fr-grid-row--gutters fr-ml-3w">
 
-        <button type="button" class="fr-btn" onclick="location.href='{% url 'conventions:load_xlsx_model' convention_uuid=convention_uuid file_type=file_type %}'">
-            <span class="fr-fi-file-download-line fr-mr-1w" aria-hidden="true"></span>Télécharger le modèle !
+        <button type="button" class="fr-btn fr-btn--secondary fr-fi-file-download-line fr-btn--icon-left" onclick="location.href='{% url 'conventions:load_xlsx_model' convention_uuid=convention_uuid file_type=file_type %}'">
+            Télécharger le modèle des {{ what }} !
         </button>
     </div>
     <div class="fr-my-3w">Puis</p>
     <div class="fr-grid-row fr-grid-row--gutters fr-ml-3w">
         <div>
-            <button name="Upload" value=True class="fr-btn">
-                <span class="fr-fi-file-download-line fr-mr-1w" aria-hidden="true"></span>Téléverser le fichier de vos {{ what }}
+            <button name="Upload" value=True class="fr-btn fr-fi-file-download-line fr-btn--icon-left">
+                Téléverser le fichier de vos {{ what }}
             </button>
         </div>
         <div class="fr-ml-3w">
