--- a/templates/conventions/step1.html
+++ b/templates/conventions/step1.html
@@ -7,7 +7,7 @@
                 {% csrf_token %}
                 <div class="fr-grid-row fr-grid-row--gutters">
                     <div class="fr-col-md-12 fr-col-lg-10 fr-col-offset-lg-1 fr-my-5w">
-                        <h2 class="fr-mb-3w">Etape 1/{{ nb_steps }} - Saisi du programme</h2>
+                        <h2 class="fr-mb-3w">Etape 1/{{ nb_steps }} - Choix du programme à conventionner</h2>
                         {% include "common/mandatory_fields_info.html" %}
                         <p class="fr-mb-3w">
                             <div class="fr-select-group {% if form.lot_uuid.errors %}fr-select-group--error{% endif %}">
@@ -36,7 +36,7 @@
                 </div>
                 <div class="fr-col-md-12 fr-col-lg-10 fr-col-offset-lg-1 fr-py-5w" style="display: flex;flex-direction: row;align-items: center;justify-content: space-between;">
                     <a class="fr-btn fr-btn--secondary" href='{% url 'conventions:index' %}'>
-                        Annulé
+                        Revenir à l'étape précédente
                     </a>
                     {% include "common/button/suivant_submit.html" with suivant='conventions:step2' %}
                 </div>
