--- a/templates/conventions/step5.html
+++ b/templates/conventions/step5.html
@@ -12,15 +12,6 @@
                         {% include "common/convention_edit_info.html" with convention=convention %}
                         {% include "common/mandatory_fields_info.html" %}
 
-                        <div class="fr-input-group {% if form.date_fin_conventionnement.errors %}fr-select-group--error{% endif %}">
-                            <label class="fr-label" for="{{form.date_fin_conventionnement.id_for_label}}">
-                                Date de fin de la convention
-                            </label>
-                            {% include "common/form/input_date.html" with form_input=form.date_fin_conventionnement %}
-                        </div>
-
-                        <hr class="fr-col-12 fr-my-3w">
-
                         {% include "common/form/download_upload_form.html" with convention_uuid=convention.uuid file_type='prets' upform=upform  what='prêts' import_errors=import_errors %}
 
                         <hr class="fr-col-12 fr-my-3w">
@@ -94,12 +85,29 @@
                             </table>
                         </div>
 
-                        <div class="fr-input-group {% if form.fond_propre.errors %}fr-select-group--error{% endif %}">
-                            <label class="fr-label" for="{{form.fond_propre.id_for_label}}">
-                                Fond propre
-                            </label>
-                            {% include "common/form/input_number.html" with form_input=form.fond_propre step="0.01" %}
+                        <hr class="fr-col-12 fr-my-3w">
+
+                        <h4>Vous pouvez aussi préciser</h4>
+
+                        <div class="fr-mb-2w">
+                            <div class="fr-grid-row fr-grid-row--gutters">
+                                <div class="fr-col-12 fr-col-md-12 fr-col-lg-6 fr-mb-2w">
+                                    {% include "common/form/input_date.html" with form_input=form.date_fin_conventionnement label="Date de fin de la convention" %}
+                                </div>
+                                <div class="fr-col-12 fr-col-md-12 fr-col-lg-6 fr-pl-md-1w fr-mb-2w">
+                                    <div class="fr-input-group {% if form.fond_propre.errors %}fr-select-group--error{% endif %}">
+                                        <label class="fr-label" for="{{form.fond_propre.id_for_label}}">
+                                            Fonds propres
+                                        </label>
+                                        {% include "common/form/input_number.html" with form_input=form.fond_propre step="0.01" %}
+                                    </div>
+                                </div>
+                            </div>
                         </div>
+
+
+
+
 
 
                     </div>
